--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,13 +1,21 @@
-<h1>My first web page</h1>
-<h2>Written with the guidance of Epicodus</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Web page #1 </title>
+  </head>
+  <body>
+    <h1>My first web page</h1>
+    <h2>Written with the guidance of Epicodus</h2>
 
-<p>This is my first web page!</p>
-<p>Isn't it nice?</p>
+    <p>This is my first web page!</p>
+    <p>Isn't it nice?</p>
 
-<p>Here are some things I'm going to learn about coding:</P>
-  <ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Javascript</li>
-    <li>And how much we hate ergonomic keyboards</li>
-  </ul>
+    <p>Here are some things I'm going to learn about coding:</P>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+      <li>And how much we hate ergonomic keyboards</li>
+    </ul>
+  </body>
+</html>
