--- a/favorite-things.html
+++ b/favorite-things.html
@@ -4,7 +4,7 @@
     <title>Michael's favorite things</title>
   </head>
   <body>
-    <h1>My favorite things</h1>
+    <h1>My <em>favorite</em> things</h1>
     <h2>These are a few of my favorite things.</h2>
 
     <h3>People</h3>
@@ -30,6 +30,7 @@
       <li>Malted milk chocolate</li>
       <li>Black licorice (really!)</li>
     </ol>
+    <img src= "img/icecream.jpeg">
 
     <p>Thanks for reading about me!</p>
   </body>
