--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,10 +4,10 @@
     <title>Web page #1 </title>
   </head>
   <body>
-    <h1>My first web page</h1>
+    <h1>My <em>first</em> web page</h1>
     <h2>Written with the guidance of Epicodus</h2>
 
-    <p>This is my first web page!</p>
+    <p><strong>This is my first web page!</strong></p>
     <p>Isn't it nice?</p>
 
     <p>Here are some things I'm going to learn about coding:</P>
@@ -18,6 +18,6 @@
       <li>Javascript</li>
       <li>And how much we hate ergonomic keyboards</li>
     </ul>
-    
+
   </body>
 </html>
